--- a/angular.json
+++ b/angular.json
@@ -62,10 +62,12 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "baas-bank-ui:build:production"
+              "buildTarget": "baas-bank-ui:build:production",
+              "proxyConfig": "proxy.conf.json"
             },
             "development": {
-              "buildTarget": "baas-bank-ui:build:development"
+              "buildTarget": "baas-bank-ui:build:development",
+              "proxyConfig": "proxy.conf.json"
             }
           },
           "defaultConfiguration": "development"
